fixed overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -675,14 +675,15 @@ fieldset {
   align-items: center;
   justify-content: center;
   width: 1170px;
-  height: 480px;
+  height: auto;
+  padding: 24px 0;
 }
 
 .advantages__background {
   box-sizing: border-box;
   background-color: var(--white);
   width: calc(100% - 48px);
-  height: calc(100% - 48px);
+  min-height: calc(100% - 48px);
   border-radius: 16px;
   display: flex;
   flex-direction: column;
@@ -699,9 +700,10 @@ fieldset {
 .advantages-list {
   display: grid;
   grid-template-columns: 505px 505px;
-  grid-template-rows: 65px 65px;
+  grid-template-rows: 66px 66px;
   column-gap: 32px;
   row-gap: 40px;
+  margin-bottom: 56px;
 }
 
 .advantages-item {
@@ -1251,6 +1253,7 @@ fieldset {
   position: relative;
   display: block;
   padding-left: 8px;
+  margin-right: 16px;
 }
 
 .control-mark {
@@ -1264,6 +1267,10 @@ fieldset {
   width: 16px;
   height: 16px;
   cursor: pointer;
+}
+
+.control-label {
+
 }
 
 .control-mark-fat {
@@ -1317,8 +1324,9 @@ fieldset {
 .catalog-filter__flavor {
   margin-right: 16px;
   padding: 10px 24px 10px 48px;
-  width: 604px;
-  height: 40px;
+  min-width: 604px;
+  height: auto;
+  flex-wrap: wrap;
 }
 
 .button-filter {
